--- a/apps/app-one/src/app/sms/sms.html
+++ b/apps/app-one/src/app/sms/sms.html
@@ -16,4 +16,4 @@
 <button (click)="sendMessage()" class="border border-gray-300 rounded-md p-2">
   Send Message
 </button>
-<p>My ID: {{getMyId()}}</p>
+<p>My ID: {{myId()}}</p>
